# crates/http/src/routes/mod.rs
@@ -3,6 +3,7 @@
 mod bindings;
 mod capacity;
 mod compute;
+mod connections;
 mod health;
 mod metrics;
 mod modules;
@@ -10,6 +11,7 @@ mod modules;
 pub use bindings::bindings_router;
 pub use capacity::capacity_router;
 pub use compute::compute_router;
+pub use connections::connections_router;
 pub use health::health_router;
 pub use metrics::metrics_router;
 pub use modules::modules_router;
